--- a/app/src/main/res/drawable/recipe_list_item_bg.xml
+++ b/app/src/main/res/drawable/recipe_list_item_bg.xml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/recipe_item_pressed"
-        android:state_pressed="true"
-        android:state_active="true"
-        android:state_selected="true">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/action_bar_primary"/>
-        </shape>
-        </item>
-    <item android:drawable="@android:color/transparent"/>
+    <item android:drawable="@color/recipe_item_pressed" android:state_pressed="true"/>
+    <item android:drawable="@drawable/transparent_bg"/>
 </selector>
