--- a/app/src/main/res/layout/category_grid_item.xml
+++ b/app/src/main/res/layout/category_grid_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:paddingTop="2dp">
 
     <ImageView
         android:id="@+id/iv_category_image"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="150dp"
         android:scaleType="centerCrop"
         android:src="@mipmap/no_image"
         android:background="@drawable/recipe_list_item_bg"/>
@@ -21,8 +21,15 @@
         android:gravity="center"
         android:textSize="22sp"
         android:singleLine="true"
-        android:textColor="@android:color/white"
-        android:layout_below="@id/iv_category_image"
+        android:textColor="@color/category_and_recipe_name"
+        android:layout_alignBottom="@id/iv_category_image"
         android:background="@color/recipe_or_category_title"/>
+
+    <View
+        android:id="@+id/category_item_foreground"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="@drawable/recipe_list_item_bg"
+        android:clickable="true"/>
 
 </RelativeLayout>
