--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -23,4 +23,11 @@
         android:singleLine="true"
         android:textSize="20sp"/>
 
+    <View
+        android:id="@+id/category_item_foreground"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@drawable/recipe_list_item_bg"
+        android:clickable="true"/>
+
 </RelativeLayout>
