--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -26,6 +26,8 @@
             android:textColor="@android:color/white"
             android:layout_marginBottom="15dp"
             android:textStyle="bold"
+            android:shadowColor="#000"
+            android:shadowRadius="5"
             android:textSize="40sp"/>
 
         <RelativeLayout
