--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:id="@+id/iv_recipe_icon"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="140dp"
         android:scaleType="centerCrop"
         android:src="@mipmap/no_image"/>
 
@@ -18,23 +18,27 @@
         android:text="@string/hello_world"
         android:textColor="@android:color/white"
         android:background="@color/recipe_or_category_title"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:textSize="20sp"
         android:paddingRight="5dp"
         android:paddingLeft="15dp"
         android:singleLine="true"
-        android:layout_below="@id/iv_recipe_icon"/>
+        android:shadowColor="#000"
+        android:shadowRadius="5"
+        android:layout_alignBottom="@id/iv_recipe_icon"/>
 
     <ProgressBar
         android:id="@+id/pb_recipe_list_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"/>
 
     <View
         android:id="@+id/recipe_item_foreground"
         android:layout_width="match_parent"
         android:layout_height="140dp"
-        android:background="@drawable/recipe_list_item_bg"/>
+        android:background="@drawable/recipe_list_item_bg"
+        android:clickable="true"/>
 
 </RelativeLayout>
