--- a/app/src/main/res/layout/fragment_add_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_recipe.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,6 +8,7 @@
         android:layout_height="match_parent" >
 
         <RelativeLayout
+            android:id="@+id/rl_add_edit_recipe_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
@@ -97,4 +98,11 @@
 
     </ScrollView>
 
-</LinearLayout>
+    <ProgressBar
+        android:id="@+id/pb_add_edit_recipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+
+</RelativeLayout>
