--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -8,16 +8,54 @@
     android:paddingRight="2dp"
     android:paddingLeft="2dp">
 
-    <GridView
-        android:id="@+id/lv_recipes"
+    <RelativeLayout
+        android:id="@+id/rl_recipes_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:verticalSpacing="0dp"
-        android:horizontalSpacing="2dp"
-        android:numColumns="2"/>
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btn_add_note"
-        style="@style/ButtonAdd"/>
+        <GridView
+            android:id="@+id/lv_recipes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:verticalSpacing="0dp"
+            android:horizontalSpacing="2dp"
+            android:numColumns="2"/>
+
+        <Button
+            android:id="@+id/btn_add_note"
+            style="@style/ButtonAdd"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_category_name_editor"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="1dp"
+        android:paddingRight="1dp"
+        android:paddingBottom="1dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="#ffaeaeae"
+        android:visibility="gone">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:paddingTop="20dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="20dp">
+
+            <EditText
+                android:id="@+id/et_edit_category_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/category_label"
+                android:layout_centerInParent="true"/>
+
+        </RelativeLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
