--- a/app/src/main/res/layout-land/fragment_recipes.xml
+++ b/app/src/main/res/layout-land/fragment_recipes.xml
@@ -37,7 +37,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:background="#ffaeaeae"
-        android:visibility="gone">
+        android:visibility="visible"
+        android:translationY="-185dp">
 
         <FrameLayout
             android:layout_width="match_parent"
