--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -41,4 +41,20 @@
         android:background="@drawable/recipe_list_item_bg"
         android:clickable="true"/>
 
+    <RelativeLayout
+        android:id="@+id/recipe_item_checkbox_holder"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:background="@android:color/transparent"
+        android:clickable="true"
+        android:visibility="gone">
+        <CheckBox
+            android:id="@+id/recipe_item_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"/>
+        </RelativeLayout>
+
 </RelativeLayout>
