--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -15,21 +15,6 @@
             android:scaleType="centerCrop"
             android:src="@mipmap/no_image"/>
 
-        <TextView
-            android:id="@+id/tv_view_recipe_title"
-            android:layout_alignBottom="@id/iv_view_recipe_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/hello_world"
-            android:paddingLeft="16dp"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:layout_marginBottom="15dp"
-            android:textStyle="bold"
-            android:shadowColor="#000"
-            android:shadowRadius="5"
-            android:textSize="40sp"/>
-
         <RelativeLayout
             android:id="@+id/rl_recipe_content"
             android:layout_width="match_parent"
@@ -100,5 +85,44 @@
                 </RelativeLayout>
 
         </RelativeLayout>
+
+        <FrameLayout
+            android:id="@+id/fl_title_holder"
+            android:layout_width="match_parent"
+            android:layout_height="315dp">
+            <TextView
+                android:id="@+id/tv_view_recipe_title"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/hello_world"
+                android:paddingLeft="16dp"
+                android:gravity="center"
+                android:textColor="@android:color/white"
+                android:layout_marginBottom="15dp"
+                android:textStyle="bold"
+                android:shadowColor="#000"
+                android:shadowRadius="5"
+                android:textSize="40sp"/>
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/bt_favorite_bg"
+            android:layout_alignBottom="@id/fl_title_holder"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="32dp"
+            android:elevation="2dp"
+            android:translationZ="2dp">
+            <ImageButton
+                android:id="@+id/ibt_make_recipe_favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:scaleType="centerInside"
+                android:src="@drawable/bt_favorite_transition_normal"
+                android:background="@android:color/transparent"/>
+        </FrameLayout>
     </RelativeLayout>
 </ScrollView>
