--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -57,4 +57,12 @@
             android:layout_marginTop="16dp"/>
         </RelativeLayout>
 
+    <ImageView
+        android:id="@+id/iv_favorite_status"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:src="@mipmap/favorite_checked_white"
+        android:visibility="gone"/>
 </RelativeLayout>
