Changes I have changed the category list loading approach. Now a presenter loads a category list via a Loader instead an AsyncTask.

--- a/app/src/main/res/drawable/add_btn_bg.xml
+++ b/app/src/main/res/drawable/add_btn_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@mipmap/add_button_pressed" android:state_pressed="true"/>
-    <item android:drawable="@mipmap/add_button"/>
+    <item android:drawable="@drawable/bt_favorite_bg_darck" android:state_pressed="true"/>
+    <item android:drawable="@drawable/bt_favorite_bg"/>
     
 </selector>
