--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
+<com.mlsdev.serhiy.mycookbook.ui.vidget.ObservableScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/sv_recipe_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
@@ -125,4 +126,4 @@
                 android:background="@drawable/bt_favorite_selector"/>
         </FrameLayout>
     </RelativeLayout>
-</ScrollView>
+</com.mlsdev.serhiy.mycookbook.ui.vidget.ObservableScrollView>
