Changes #3 and Fixes
I.   The RecepeListFragment doesn't implement OnClickListener any longer.
II.  The RecipeListAdapter is used as aninterfase now.
III. Animation objects are got by AnimationFactory.
IV.  The opetions menu in the action bar on the recipe list screen uses custom buttons instead options menu.
V.   Fixed bug with the recipe list disappearing with the screen rotation.
VI.  Fixed bug with duplicated recipes in the ListView.
VII. Fixed bug with the recipe multyselection for deleting.

--- a/app/src/main/res/drawable-v21/bt_favorite_selector.xml
+++ b/app/src/main/res/drawable-v21/bt_favorite_selector.xml
@@ -3,7 +3,7 @@
     android:color="@color/recipe_item_pressed_ripple">
 
     <item android:id="@android:id/mask"
-        android:drawable="@drawable/bt_favorite_bg"/>
+        android:drawable="@drawable/circle_mask"/>
 
     <item android:drawable="@android:color/transparent"/>
 </ripple>
