--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -83,8 +83,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
             android:layout_marginRight="18dp"
+            android:layout_marginTop="35dp"
             android:visibility="gone"
             android:background="@drawable/ready_btn_selector"/>
 
