--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -10,15 +10,58 @@
     android:elevation="5dp"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
 
-    <ImageButton
-        android:id="@+id/iv_filter_by_favorites"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:padding="5dp"
-        android:src="@drawable/bt_favorite_transition_normal"
-        android:scaleType="centerInside"
-        android:layout_gravity="center_vertical|end"
-        android:background="@drawable/bt_favorite_selector"
-        android:visibility="gone"/>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical|end">
+
+        <ImageButton
+            android:id="@+id/iv_filter_by_favorites"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:padding="5dp"
+            android:src="@drawable/bt_favorite_transition_normal"
+            android:scaleType="centerInside"
+            android:layout_centerVertical="true"
+            android:background="@drawable/bt_favorite_selector"
+            android:visibility="gone"/>
+
+        <ImageButton
+            android:id="@+id/ib_unselect_all"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:padding="5dp"
+            android:src="@mipmap/icon_checked_action"
+            android:scaleType="centerInside"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/iv_filter_by_favorites"
+            android:background="@drawable/bt_favorite_selector"
+            android:visibility="gone"/>
+
+        <ImageButton
+            android:id="@+id/ib_delete_recipes"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:padding="5dp"
+            android:src="@mipmap/icon_delete_action"
+            android:scaleType="centerInside"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/ib_unselect_all"
+            android:background="@drawable/bt_favorite_selector"
+            android:visibility="gone"/>
+
+        <ImageButton
+            android:id="@+id/ib_edit_category"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:padding="5dp"
+            android:src="@mipmap/icon_edit_action"
+            android:scaleType="centerInside"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/ib_delete_recipes"
+            android:background="@drawable/bt_favorite_selector"
+            android:visibility="gone"/>
+
+        </RelativeLayout>
 
 </android.support.v7.widget.Toolbar>
