--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -8,7 +8,7 @@
     <GridView
         android:id="@+id/gv_categories_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="fill_parent"
         android:numColumns="2"
         android:horizontalSpacing="2dp"
         android:verticalSpacing="0dp"/>
@@ -16,7 +16,7 @@
     <ListView
         android:id="@+id/lv_categories_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="fill_parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:visibility="gone"/>
