--- a/app/src/main/res/drawable/add_img_btn_bg.xml
+++ b/app/src/main/res/drawable/add_img_btn_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@mipmap/add_image_button_pressed"
+    <item android:drawable="@drawable/add_image_button_pressed"
         android:state_pressed="true"/>
-    <item android:drawable="@mipmap/add_image_button"/>
+    <item android:drawable="@drawable/add_image_button_normal"/>
 </selector>
