Added the settings an pressure screens.

--- a/app/src/main/res/layout/fragment_left_drawer.xml
+++ b/app/src/main/res/layout/fragment_left_drawer.xml
@@ -8,20 +8,68 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
         
-        <Button
+        <RelativeLayout
             android:id="@+id/btn_main"
-            style="@style/drawer_menu_btn"
-            android:drawableLeft="@mipmap/icon_home"
-            android:background="@drawable/drawer_btn_bg"
+            style="@style/button_holder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/main"/>
-    
-        <Button
+            android:paddingLeft="20dp">
+            <ImageView
+                android:id="@+id/iv_icon_home"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@mipmap/icon_home"
+                android:layout_centerVertical="true"/>
+            <Button
+                style="@style/drawer_menu_btn"
+                android:layout_toRightOf="@id/iv_icon_home"
+                android:clickable="false"
+                android:background="@android:color/transparent"
+                android:text="@string/main"/>
+            </RelativeLayout>
+
+        <RelativeLayout
             android:id="@+id/btn_settings"
-            style="@style/drawer_menu_btn"
-            android:drawableLeft="@mipmap/icon_settings"
-            android:background="@drawable/drawer_btn_bg"
-            android:text="@string/settings"/>
+            style="@style/button_holder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="20dp">
+            <ImageView
+                android:id="@+id/iv_icon_settings"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@mipmap/icon_settings"
+                android:layout_centerVertical="true"/>
+            <Button
+                style="@style/drawer_menu_btn"
+                android:layout_toRightOf="@id/iv_icon_settings"
+                android:background="@android:color/transparent"
+                android:clickable="false"
+                android:text="@string/settings"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/btn_pressure"
+            style="@style/button_holder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="20dp">
+            <ImageView
+                android:id="@+id/iv_icon_pressure"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@mipmap/ic_pressure"
+                android:layout_centerVertical="true"/>
+            <Button
+                style="@style/drawer_menu_btn"
+                android:layout_toRightOf="@id/iv_icon_pressure"
+                android:background="@android:color/transparent"
+                android:clickable="false"
+                android:text="@string/g_to_mg"/>
+        </RelativeLayout>
     
         <View style="@style/divider"
             android:layout_marginBottom="20dp"
