--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,10 +24,15 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">left|center_vertical</item>
         <item name="android:background">@drawable/drawer_btn_bg</item>
-        <item name="android:drawablePadding">22dp</item>
-        <item name="android:paddingLeft">20dp</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textAppearanceButton">@style/Base.TextAppearance.AppCompat</item>
+    </style>
+
+    <!-- Button Holders -->
+    <style name="button_holder">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/drawer_btn_bg</item>
     </style>
     
     <style name="divider">
