--- a/app/src/main/res/layout/fragment_pressure.xml
+++ b/app/src/main/res/layout/fragment_pressure.xml
@@ -9,49 +9,58 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/tv_left"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="4"
             android:gravity="center"
+            android:textSize="50sp"
             android:text="@string/pressure_g"/>
 
         <ImageButton
+            android:id="@+id/ib_change_convert_type"
             android:layout_width="50dp"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:src="@mipmap/ic_change"
+            android:scaleType="centerInside"
+            android:layout_gravity="center"
+            android:background="@android:color/transparent"/>
 
         <TextView
+            android:id="@+id/tv_right"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="4"
             android:gravity="center"
+            android:textSize="50sp"
             android:text="@string/pressure_mg"/>
         </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_pressure_result"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="50dp"
-        android:gravity="center">
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal">
 
         <NumberPicker
-            android:id="@+id/np_left"
-            android:layout_width="100dp"
+            android:id="@+id/np_select_value"
+            android:layout_width="0dp"
+            android:layout_weight="5"
+            android:layout_gravity="center_vertical"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_pressure_result"
+            android:layout_width="0dp"
+            android:layout_weight="5"
             android:layout_height="wrap_content"
-            android:layout_marginRight="60dp"></NumberPicker>
-
-        <NumberPicker
-            android:id="@+id/np_right"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content" ></NumberPicker>
+            android:textSize="50sp"
+            android:gravity="center_horizontal"
+            android:layout_gravity="center_vertical" />
         </LinearLayout>
 
 </LinearLayout>
